Bug 505492 - Haruna's replay is notieably slower than Media Player Classic Qute Theater
Summary: Haruna's replay is notieably slower than Media Player Classic Qute Theater
Status: RESOLVED FIXED
Alias: None
Product: Haruna
Classification: Applications
Component: generic (other bugs)
Version First Reported In: 1.4.0
Platform: Arch Linux Linux
: NOR minor
Target Milestone: ---
Assignee: george fb
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-06-11 21:33 UTC by Fernando M. Muniz
Modified: 2025-07-02 21:24 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Haruna vs Media Player Classic Qute Theater's loop speed (2.11 MB, video/mp4)
2025-06-11 21:33 UTC, Fernando M. Muniz
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Fernando M. Muniz 2025-06-11 21:33:38 UTC
Created attachment 182200 [details]
Haruna vs Media Player Classic Qute Theater's loop speed

Haruna takes time to loop, while other players like mpv and Media Player Classic Qute Theater doesn't.
Comment 1 Fernando M. Muniz 2025-06-11 22:07:26 UTC
1- Record you making a circle with the pointer.
2- Edit on KDEnlive to make it frame perfect.
3- Activate loops on Haruna and another player (In my case, Flatpak Haruna and Flatpak Media Player Classic Qute Theater).
4- Play a video and observe how much time it takes to loop.

Result:
Haruna takes about one second, while MPC-Qute takes about one frame.
Comment 2 george fb 2025-07-02 21:24:40 UTC
Git commit 56f9ccde9a0ab9e159d678424cfb033b5972ce68 by George Florea Bănuș.
Committed on 02/07/2025 at 21:19.
Pushed by georgefb into branch 'master'.

mpvitem: refactor behavior when playback ends

use `eof-reached` property to prevent reloading the same file in certain cases,
instead seek to the beginning of the file

M  +44   -14   src/mpv/mpvitem.cpp
M  +3    -0    src/mpv/mpvitem.h
M  +6    -0    src/mpv/mpvproperties.h

https://invent.kde.org/multimedia/haruna/-/commit/56f9ccde9a0ab9e159d678424cfb033b5972ce68