mpvitem: refactor behavior when playback ends

use `eof-reached` property to prevent reloading the same file in certain cases,
instead seek to the beginning of the file

BUG: 505492